@@ -1,5 +1,8 @@
 # 歷史更新 History Update
 
+* 20230428 Update
+  * 加入 LineBot判斷邀請網址
+
 * 20230427 Update
   * 加入 LineBot功能判斷LineID功能
   * 更新 個人不想看的廣告或網站
